--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -9,5 +9,9 @@
     />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body></body>
+  <body>
+    <script>
+      console.log('__INJECT_VERSION__');
+    </script>
+  </body>
 </html>
