chore: add github pages build

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -31,5 +31,9 @@
     <div class="output-area">
       <div id="result"></div>
     </div>
+
+    <script>
+      console.log('__INJECT_VERSION__');
+    </script>
   </body>
 </html>
